added basic components and grid

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-
 <app-header></app-header>
-<h1>Hello Ze!</h1>
+
+<div class="ui container" style="margin-top: 45px">
+  <app-gundams></app-gundams>
+</div>
