--- a/src/app/gundams/gundams.component.html
+++ b/src/app/gundams/gundams.component.html
@@ -1,1 +1,8 @@
-<p>gundams works!</p>
+<div class="ui grid stackable container">
+  <div class="eight wide column">
+    <app-gundam-list></app-gundam-list>
+  </div>
+  <div class="eight wide column">
+    <app-gundam-detail></app-gundam-detail>
+  </div>
+</div>
