--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,18 @@
-<p>header works!</p>
+<div class="ui teal inverted attached menu">
+  <div class="item">
+    page 1
+  </div>
+  <div class="item active">
+    page 2
+  </div>
+  <div class="ui simple dropdown item">
+    Dropdown
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="item">Choice 1</div>
+      <div class="item">Choice 2</div>
+      <div class="item">Choice 3</div>
+    </div>
+  </div>
+
+</div>
